# LuoXia

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README-en.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml  test,.py  webui.bat  webui.sh
app/config/: config.py
luoxia/: constans.py  main.py
luoxia/app/: asgi.py  router.py
luoxia/app/config/: __init__.py  config.py  log.py
luoxia/app/controllers/: base.py
luoxia/app/controllers/manager/: base_manager.py  memory_manager.py  redis_manager.py
luoxia/app/controllers/v1/: llm.py  video.py
luoxia/app/models/: exception.py  schema.py
luoxia/app/services/: llm.py  material.py  state.py  subtitle.py  task.py  video.py  voice.py
luoxia/app/utils/: utils.py
luoxia/storage/tasks/e64b0e82-a732-4640-b32c-f995e0dbc63b/: script.json  subtitle.srt
luoxia/streamlit_web/: main.py  tool.py
luoxia/webui/: main.py  tool.py
sites/docs/guide/: README.md
sites/docs/zh/guide/: README.md
webui/: main.py
